<resources>
    <string name="app_name">NeoBank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dev Panwar</string>
    <string name="nav_header_subtitle">UPI:912xxxxxx@apl</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="link_credit_card">Link Credit Card</string>
    <string name="upi_amp_payment_settings"><![CDATA[UPI & Payment Settings]]></string>
    <string name="tap_to_pay">Tap to Pay</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="get_instant_loan">Get Instant Loan</string>
    <string name="notification">Notification</string>
    <string name="loans">Loans</string>
    <string name="debit_card">Debit Card</string>
    <string name="account">Account</string>
    <string name="image">image</string>


</resources>