<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<!--tools:showIn navigation view is Used to See this on Navigation View-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ProfileSettings"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_settings" />
        <item
            android:id="@+id/help_and_support"
            android:icon="@drawable/baseline_support_agent_24"
            android:title="@string/help_amp_support" />
        <item
            android:id="@+id/link_CC"
            android:icon="@drawable/baseline_credit_card_24"
            android:title="@string/link_credit_card"
            />
        <item
            android:id="@+id/UPI_andPayment"
            android:icon="@drawable/baseline_payments_24"
            android:title="@string/upi_amp_payment_settings" />
        <item
            android:id="@+id/tapToPay"
            android:icon="@drawable/baseline_tap_and_play_24"
            android:title="@string/tap_to_pay" />
        <item
            android:id="@+id/getLoan"
            android:icon="@drawable/baseline_currency_rupee_24"
            android:title="@string/get_instant_loan" />

    </group>
</menu>